Better begining animation

--- a/app/index.html
+++ b/app/index.html
@@ -12,12 +12,13 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <!--<link rel="stylesheet" href="styles/main.css">-->
     <!-- endbuild -->
 
     <link href='styles/Open_Sans_300.css' rel='stylesheet' type='text/css'>
     <link href='styles/Open_Sans_Condensed_300_700.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style_new.css">
     <link rel="stylesheet" type="text/css" media="handheld,screen and (max-width: 680px), screen and (max-device-width: 680px)" href="styles/style_680.css" />
     <link rel="icon" type="image/png" href="images/logo.png" />
 
