--- a/app/index.html
+++ b/app/index.html
@@ -57,8 +57,10 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <script src="scripts/jquery-ui-1.10.4.custom.min.js"></script>
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/services/OpeningService.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
@@ -66,7 +68,6 @@
     <script>
       document.getElementById('voile-anim-debut').style.opacity = 1;
     </script>
-    <script src="scripts/jquery-ui-1.10.4.custom.min.js"></script>
     <script src="scripts/script.js"></script>
 
   </body>
