--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <link href='styles/Open_Sans_300.css' rel='stylesheet' type='text/css'>
     <link href='styles/Open_Sans_Condensed_300_700.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/css/style.css">
-    <link rel="stylesheet" type="text/css" media="handheld,screen and (max-width: 680px), screen and (max-device-width: 680px)" href="styles/style_680.css" />
+    <!--<link rel="stylesheet" type="text/css" media="handheld,screen and (max-width: 680px), screen and (max-device-width: 680px)" href="styles/style_680.css" />-->
     <link rel="icon" type="image/png" href="images/logo.png" />
 
 
@@ -42,7 +42,7 @@
        ga('send', 'pageview');
     </script>
 
-    <!-- build:js(.) scripts/vendor.js -->
+    <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
@@ -56,8 +56,8 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <script src="scripts/jquery-ui-1.10.4.custom.min.js"></script>
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <!-- build:jsApp scripts/scripts.js -->
+    <script src="scripts/jquery-ui-1.10.4.custom.min.js"></script><!-- TODO bower-->
         <script src="scripts/app.js"></script>
         <script src="scripts/services/OpeningService.js"></script>
         <script src="scripts/controllers/about.js"></script>
